PROJECT(luacv C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)

ADD_LIBRARY(luacv MODULE luacv.c)
SET_TARGET_PROPERTIES(luacv PROPERTIES PREFIX "")

TARGET_LINK_LIBRARIES(luacv ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(luacv ${LUA_LIBRARY})

INCLUDE_DIRECTORIES(cv ${LUA_INCLUDE_DIR})

